--- a/App.xaml
+++ b/App.xaml
@@ -1,9 +1,8 @@
 ﻿<Application x:Class="PlateDropletApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:prism="http://prismlibrary.com/"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:PlateDropletApp"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-         
     </Application.Resources>
 </Application>
