--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="PlateDropletApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:prism="http://prismlibrary.com/"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views/MainWindow.xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
     </Application.Resources>
 </Application>
