--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -1,66 +1,109 @@
-﻿<Window x:Class="PlateDropletApp.Views.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:prism="http://prismlibrary.com/"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:viewModels="clr-namespace:PlateDropletApp.ViewModels"
-        xmlns:converters="clr-namespace:PlateDropletApp.Converters"
-        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        Title="Plate Droplet Data Display" Height="600" Width="800">
+﻿<Window
+    x:Class="PlateDropletApp.Views.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:PlateDropletApp.Converters"
+    xmlns:prism="http://prismlibrary.com/"
+    xmlns:viewModels="clr-namespace:PlateDropletApp.ViewModels"
+    xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+    Title="Plate Droplet Data Display"
+    Width="800"
+    Height="600">
     <Window.Resources>
-        <converters:IsLowDropletToBrushConverter x:Key="IsLowDropletToBrushConverter"/>
-        <converters:IsLowDropletToDisplayTextConverter x:Key="IsLowDropletToDisplayTextConverter"/>
-        <converters:InverseBooleanConverter x:Key="InverseBooleanConverter"/>
-        <!-- Define the Validation Error Template -->
+        <converters:IsLowDropletToBrushConverter x:Key="IsLowDropletToBrushConverter" />
+        <converters:IsLowDropletToDisplayTextConverter x:Key="IsLowDropletToDisplayTextConverter" />
+        <converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
+        <!--  Define the Validation Error Template  -->
         <ControlTemplate x:Key="ValidationErrorTemplate">
             <DockPanel LastChildFill="True">
                 <Border BorderBrush="Red" BorderThickness="1">
-                    <AdornedElementPlaceholder/>
+                    <AdornedElementPlaceholder />
                 </Border>
-                <TextBlock Foreground="Red" Margin="5,0,0,0" Text="{Binding [0].ErrorContent}" VerticalAlignment="Center"/>
+                <TextBlock
+                    Margin="5,0,0,0"
+                    VerticalAlignment="Center"
+                    Foreground="Red"
+                    Text="{Binding [0].ErrorContent}" />
             </DockPanel>
         </ControlTemplate>
     </Window.Resources>
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <!-- Controls -->
+            <!--  Controls  -->
             <RowDefinition Height="Auto" />
-            <!-- Summary -->
+            <!--  Summary  -->
             <RowDefinition Height="*" />
-            <!-- Plate Grid -->
+            <!--  Plate Grid  -->
         </Grid.RowDefinitions>
 
-        <!-- Controls -->
-        <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="0,0,0,10">
-            <Button Content="Select Plate Data" Command="{Binding BrowseCommand}" Width="150" Margin="0,0,10,0"/>
-            <TextBlock Text="Droplet Threshold:" VerticalAlignment="Center" Margin="0,0,10,0"/>
-            <xctk:IntegerUpDown Value="{Binding DropletThreshold, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, ValidatesOnExceptions=True, NotifyOnValidationError=True}" 
-                                Width="100" Minimum="0" Maximum="500" Validation.ErrorTemplate="{StaticResource ValidationErrorTemplate}"/>
-            <Button Content="Update" Command="{Binding UpdateThresholdCommand}" Width="100" Margin="10,0,0,0"
-                    IsEnabled="{Binding HasErrors, Converter={StaticResource InverseBooleanConverter}}"/>
+        <!--  Controls  -->
+        <StackPanel
+            Grid.Row="0"
+            Margin="0,0,0,10"
+            Orientation="Horizontal">
+            <Button
+                Width="150"
+                Margin="0,0,10,0"
+                Command="{Binding BrowseCommand}"
+                Content="Select Plate Data" />
+            <TextBlock
+                Margin="0,0,10,0"
+                VerticalAlignment="Center"
+                Text="Droplet Threshold:" />
+            <xctk:IntegerUpDown
+                Width="100"
+                Maximum="500"
+                Minimum="0"
+                Validation.ErrorTemplate="{StaticResource ValidationErrorTemplate}"
+                Value="{Binding DropletThreshold, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, ValidatesOnExceptions=True, NotifyOnValidationError=True}" />
+            <Button
+                Width="100"
+                Margin="10,0,0,0"
+                Command="{Binding UpdateThresholdCommand}"
+                Content="Update"
+                IsEnabled="{Binding HasErrors, Converter={StaticResource InverseBooleanConverter}}" />
         </StackPanel>
 
-        <!-- Summary -->
-        <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="0,0,0,10">
-            <TextBlock Text="Summary :" FontWeight="Bold" VerticalAlignment="Center"/>
-            <TextBlock Text="Total Well Count: " Margin="10,0,0,0" VerticalAlignment="Center"/>
-            <TextBlock Text="{Binding TotalWellCount}" VerticalAlignment="Center"/>
-            <TextBlock Text="Total well count with low droplets: " Margin="10,0,0,0" VerticalAlignment="Center"/>
-            <TextBlock Text="{Binding LowDropletWellCount}" VerticalAlignment="Center"/>
+        <!--  Summary  -->
+        <StackPanel
+            Grid.Row="1"
+            Margin="0,0,0,10"
+            Orientation="Horizontal">
+            <TextBlock
+                VerticalAlignment="Center"
+                FontWeight="Bold"
+                Text="Summary :" />
+            <TextBlock
+                Margin="10,0,0,0"
+                VerticalAlignment="Center"
+                Text="Total Well Count: " />
+            <TextBlock VerticalAlignment="Center" Text="{Binding TotalWellCount}" />
+            <TextBlock
+                Margin="10,0,0,0"
+                VerticalAlignment="Center"
+                Text="Total well count with low droplets: " />
+            <TextBlock VerticalAlignment="Center" Text="{Binding LowDropletWellCount}" />
         </StackPanel>
 
-        <!-- Plate Grid -->
+        <!--  Plate Grid  -->
         <ScrollViewer Grid.Row="2">
             <ItemsControl ItemsSource="{Binding Plate.Wells}">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <UniformGrid Rows="{Binding Plate.Rows}" Columns="{Binding Plate.Columns}"/>
+                        <UniformGrid Columns="{Binding Plate.Columns}" Rows="{Binding Plate.Rows}" />
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <Border BorderBrush="Black" BorderThickness="0.5" Background="{Binding IsLowDroplet, Converter={StaticResource IsLowDropletToBrushConverter}}">
-                            <TextBlock Text="{Binding IsLowDroplet, Converter={StaticResource IsLowDropletToDisplayTextConverter}}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <Border
+                            Background="{Binding IsLowDroplet, Converter={StaticResource IsLowDropletToBrushConverter}}"
+                            BorderBrush="Black"
+                            BorderThickness="0.5">
+                            <TextBlock
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Text="{Binding IsLowDroplet, Converter={StaticResource IsLowDropletToDisplayTextConverter}}" />
                         </Border>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
