--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -2,103 +2,21 @@
     x:Class="PlateDropletApp.Views.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:converters="clr-namespace:PlateDropletApp.Converters"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:viewModels="clr-namespace:PlateDropletApp.ViewModels"
     xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
     Title="Plate Droplet Data Display"
     Width="800"
     Height="600"
-    AllowsTransparency="False"
-    Background="Transparent"
     WindowStyle="SingleBorderWindow">
+
+    <!--  Merge the external resource dictionary  -->
     <Window.Resources>
-        <converters:IsLowDropletToBrushConverter x:Key="IsLowDropletToBrushConverter" />
-        <converters:IsLowDropletToDisplayTextConverter x:Key="IsLowDropletToDisplayTextConverter" />
-        <converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
-
-        <!--  Define Header and Paragraph Styles  -->
-        <Style x:Key="HeaderText" TargetType="TextBlock">
-            <Setter Property="FontSize" Value="20" />
-            <Setter Property="Foreground" Value="DarkSlateGray" />
-            <Setter Property="VerticalAlignment" Value="Center" />
-        </Style>
-
-        <Style x:Key="ParagraphText" TargetType="TextBlock">
-            <Setter Property="FontSize" Value="14" />
-            <Setter Property="Foreground" Value="DarkSlateGray" />
-            <Setter Property="VerticalAlignment" Value="Center" />
-        </Style>
-
-        <!--  Flat UI Style for Buttons  -->
-        <Style x:Key="FlatButton" TargetType="Button">
-            <Setter Property="Background" Value="SteelBlue " />
-            <!--  Primary color  -->
-            <Setter Property="Foreground" Value="White" />
-            <Setter Property="BorderBrush" Value="SteelBlue " />
-            <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="FontSize" Value="20" />
-            <Setter Property="Cursor" Value="Hand" />
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border
-                            Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <!--  Mouse Over Effect  -->
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="LightSteelBlue" />
-                                <!--  Darker shade on hover  -->
-                                <Setter Property="BorderBrush" Value="LightSteelBlue" />
-                            </Trigger>
-                            <!--  Disabled State  -->
-                            <Trigger Property="IsEnabled" Value="False">
-                                <Setter Property="Background" Value="#bdc3c7" />
-                                <!--  Gray for disabled  -->
-                                <Setter Property="BorderBrush" Value="#bdc3c7" />
-                                <Setter Property="Foreground" Value="White" />
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <!--  Well Border Style with Shadow Effect  -->
-        <Style x:Key="WellBorder" TargetType="Border">
-            <Setter Property="BorderBrush" Value="SlateGray" />
-            <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="CornerRadius" Value="4" />
-            <Setter Property="Effect">
-                <Setter.Value>
-                    <DropShadowEffect
-                        BlurRadius="5"
-                        Direction="315"
-                        Opacity="0.3"
-                        ShadowDepth="3"
-                        Color="Black" />
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <!--  Validation Error Template  -->
-        <ControlTemplate x:Key="ValidationErrorTemplate">
-            <DockPanel LastChildFill="True">
-                <Border BorderBrush="DarkRed" BorderThickness="1">
-                    <AdornedElementPlaceholder />
-                </Border>
-                <TextBlock
-                    Margin="120,0,0,0"
-                    VerticalAlignment="Center"
-                    FontSize="15"
-                    Foreground="DarkRed"
-                    Text="{Binding [0].ErrorContent}" />
-            </DockPanel>
-        </ControlTemplate>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../Resources/Styles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Window.Resources>
 
     <Border Background="Lavender">
@@ -109,37 +27,44 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
-            <!--  Select & Summary  -->
+            <!--  Summary Section  -->
             <StackPanel Grid.Row="0" Orientation="Vertical">
                 <Button
                     Width="200"
                     HorizontalAlignment="Right"
                     Command="{Binding BrowseCommand}"
                     Content="Select Plate Data"
-                    Style="{StaticResource FlatButton}" />
-                <TextBlock Style="{StaticResource HeaderText}" Text="Summary" />
-                <WrapPanel>
-                    <TextBlock Style="{StaticResource ParagraphText}" Text="Total Well Count: " />
-                    <TextBlock Style="{StaticResource ParagraphText}" Text="{Binding TotalWellCount}" />
+                    Style="{StaticResource FlatButtonStyle}" />
+
+                <TextBlock
+                    Margin="0,10,0,0"
+                    Style="{StaticResource HeaderTextStyle}"
+                    Text="Summary" />
+
+                <WrapPanel Margin="0,5,0,0">
+                    <TextBlock Style="{StaticResource ParagraphTextStyle}" Text="Total Well Count: " />
+                    <TextBlock
+                        FontWeight="Bold"
+                        Style="{StaticResource ParagraphTextStyle}"
+                        Text="{Binding TotalWellCount}" />
                 </WrapPanel>
                 <WrapPanel>
-                    <TextBlock Style="{StaticResource ParagraphText}" Text="Total well count with low droplets: " />
-                    <TextBlock Style="{StaticResource ParagraphText}" Text="{Binding LowDropletWellCount}" />
+                    <TextBlock Style="{StaticResource ParagraphTextStyle}" Text="Total wells with low droplets: " />
+                    <TextBlock
+                        FontWeight="Bold"
+                        Style="{StaticResource ParagraphTextStyle}"
+                        Text="{Binding LowDropletWellCount}" />
                 </WrapPanel>
             </StackPanel>
 
-            <!--  Plate Grid with Headers  -->
+            <!--  Plate Grid Section  -->
             <Grid Grid.Row="1" Margin="0,10,0,10">
                 <Grid.RowDefinitions>
-                    <!--  Column Headers Row  -->
                     <RowDefinition Height="Auto" />
-                    <!--  Data Rows  -->
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <!--  Row Headers Column  -->
                     <ColumnDefinition Width="Auto" />
-                    <!--  Data Columns  -->
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
 
@@ -155,13 +80,7 @@
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Border
-                                Padding="5"
-                                HorizontalAlignment="Stretch"
-                                VerticalAlignment="Stretch"
-                                Background="LightGray"
-                                BorderBrush="Gray"
-                                BorderThickness="1">
+                            <Border Style="{StaticResource HeaderCellStyle}">
                                 <TextBlock
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center"
@@ -173,83 +92,81 @@
                 </ItemsControl>
 
                 <!--  Row Headers  -->
-                <ItemsControl
+                <ScrollViewer
                     Grid.Row="1"
                     Grid.Column="0"
-                    ItemsSource="{Binding PlateRows}">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <UniformGrid Columns="1" Rows="{Binding PlateRows.Count}" />
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <Border
-                                Padding="5"
-                                HorizontalAlignment="Stretch"
-                                VerticalAlignment="Stretch"
-                                Background="LightGray"
-                                BorderBrush="Gray"
-                                BorderThickness="1">
-                                <TextBlock
-                                    HorizontalAlignment="Center"
-                                    VerticalAlignment="Center"
-                                    FontWeight="Bold"
-                                    Text="{Binding RowHeader}" />
-                            </Border>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
+                    VerticalScrollBarVisibility="Auto">
+                    <ItemsControl ItemsSource="{Binding PlateRows}">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <UniformGrid Columns="1" Rows="{Binding PlateRows.Count}" />
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Border Style="{StaticResource HeaderCellStyle}">
+                                    <TextBlock
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Center"
+                                        FontWeight="Bold"
+                                        Text="{Binding RowHeader}" />
+                                </Border>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </ScrollViewer>
 
                 <!--  Data Cells  -->
-                <ItemsControl
+                <ScrollViewer
                     Grid.Row="1"
                     Grid.Column="1"
-                    ItemsSource="{Binding PlateRows}">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <UniformGrid Columns="1" Rows="{Binding PlateRows.Count}" />
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <ItemsControl ItemsSource="{Binding Cells}">
-                                <ItemsControl.ItemsPanel>
-                                    <ItemsPanelTemplate>
-                                        <UniformGrid Columns="{Binding Cells.Count}" Rows="1" />
-                                    </ItemsPanelTemplate>
-                                </ItemsControl.ItemsPanel>
-                                <ItemsControl.ItemTemplate>
-                                    <DataTemplate>
-                                        <Border
-                                            HorizontalAlignment="Stretch"
-                                            VerticalAlignment="Stretch"
-                                            Background="{Binding IsLowDroplet, Converter={StaticResource IsLowDropletToBrushConverter}}"
-                                            Style="{StaticResource WellBorder}">
-                                            <TextBlock
-                                                HorizontalAlignment="Center"
-                                                VerticalAlignment="Center"
-                                                FontSize="15"
-                                                Text="{Binding IsLowDroplet, Converter={StaticResource IsLowDropletToDisplayTextConverter}}" />
-                                        </Border>
-                                    </DataTemplate>
-                                </ItemsControl.ItemTemplate>
-                            </ItemsControl>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
+                    HorizontalScrollBarVisibility="Auto"
+                    VerticalScrollBarVisibility="Auto">
+                    <ItemsControl ItemsSource="{Binding PlateRows}">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <UniformGrid Columns="1" Rows="{Binding PlateRows.Count}" />
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <ItemsControl ItemsSource="{Binding Cells}">
+                                    <ItemsControl.ItemsPanel>
+                                        <ItemsPanelTemplate>
+                                            <UniformGrid Columns="{Binding Cells.Count}" Rows="1" />
+                                        </ItemsPanelTemplate>
+                                    </ItemsControl.ItemsPanel>
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+                                            <Border Background="{Binding IsLowDroplet, Converter={StaticResource IsLowDropletToBrushConverter}}" Style="{StaticResource WellBorderStyle}">
+                                                <TextBlock
+                                                    HorizontalAlignment="Center"
+                                                    VerticalAlignment="Center"
+                                                    FontSize="15"
+                                                    Text="{Binding IsLowDroplet, Converter={StaticResource IsLowDropletToDisplayTextConverter}}" />
+                                            </Border>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </ScrollViewer>
             </Grid>
 
-            <!--  Threshold Set  -->
+            <!--  Threshold Section  -->
             <StackPanel Grid.Row="2" Orientation="Vertical">
-                <TextBlock Style="{StaticResource HeaderText}" Text="Droplet Threshold:" />
+                <TextBlock
+                    Margin="0,10,0,0"
+                    Style="{StaticResource HeaderTextStyle}"
+                    Text="Droplet Threshold:" />
                 <WrapPanel>
                     <xctk:IntegerUpDown
-                        Width="50"
+                        Width="100"
                         HorizontalAlignment="Left"
                         FontSize="15"
-                        Text="{Binding DropletThresholdText, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, ValidatesOnExceptions=True, NotifyOnValidationError=True}"
-                        Validation.ErrorTemplate="{StaticResource ValidationErrorTemplate}" />
+                        Validation.ErrorTemplate="{StaticResource ValidationErrorTemplate}"
+                        Value="{Binding DropletThresholdText, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, ValidatesOnExceptions=True, NotifyOnValidationError=True}" />
                     <Button
                         Width="100"
                         Margin="5,0,0,0"
@@ -257,7 +174,7 @@
                         Command="{Binding UpdateThresholdCommand}"
                         Content="Update"
                         IsEnabled="{Binding HasErrors, Converter={StaticResource InverseBooleanConverter}}"
-                        Style="{StaticResource FlatButton}" />
+                        Style="{StaticResource FlatButtonStyle}" />
                 </WrapPanel>
             </StackPanel>
         </Grid>
